# gecko

./: .flake8  .gitignore  .gitmodules  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  publish.yml  test.yml
.woodpecker/: .benchmark.yml  .lint.yml  .publish.yml  .test.yml
api-reference/: index.html
citing-gecko/: index.html
data/: ocr.csv  test.csv
data-corruption/: index.html
data-generation/: index.html
data-mutation/: index.html
docs/: api-reference.md  citing-gecko.md  data-corruption.md  data-generation.md  data-mutation.md  index.md  release-notes.md
docs/examples/: german.md
examples/german/: index.html
gecko/: __init__.py  _cldr.py  _dfbitlookup.py  _typedefs.py  corruptor.py  dfbitlookup.py  dfidx.py  generator.py  mutator.py
geco/: cldr.py  corruptor.py  generator.py
release-notes/: index.html
search/: search_index.json
tests/: conftest.py  helpers.py  test_bench_fruits.py  test_bench_generator.py  test_bench_german.py  test_cldr.py  test_corruptor.py  test_dfbitlookup.py  test_dfidx.py  test_generator.py  test_mutator.py  test_mutator_with_p.py
tests/assets/: dob-day-month-flip.csv  dob-six-nine.csv  dob-year-flip.csv  freq-fruit-origin.csv  freq-fruits-types.csv  freq-fruits.csv  freq_table_gender.csv  freq_table_header.csv  freq_table_no_header.csv  freq_table_no_header.tsv  given-name.csv  homophone-de.csv  ocr-test.csv  phonetic-test.csv  regex-foobar-case-insensitive.csv
