[tool.poetry]
name = "gecko-syndata"
version = "0.2.0"
description = "Mass generation and corruption of realistic synthetic data."
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "gecko" }]
license = "MIT"
documentation = "https://ul-mds.gitlab.io/record-linkage/gecko/gecko-docs"
repository = "https://gitlab.com/ul-mds/record-linkage/gecko/gecko"
keywords = ["data science", "data generation", "data corruption", "synthetic data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.20.3,<2"
lxml = ">=4.9.0,<6"
pandas = "^2.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
