[tool.poetry]
name = "gecko-syndata"
version = "0.3.0"
description = "Generation and mutation of realistic data at scale."
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "gecko" }]
license = "MIT"
documentation = "https://ul-mds.github.io/gecko/"
repository = "https://github.com/ul-mds/gecko"
keywords = ["data science", "data generation", "data mutation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.20.3,<2"
lxml = ">=4.9.0,<6"
pandas = "^2.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.14"
mkdocs-material = "^9.5.13"
mkdocstrings = { extras = ["python"], version = "^0.24.1" }
gitpython = "^3.1.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
