[tool.poetry]
name = "gecko-syndata"
version = "0.5.2"
description = "Generation and mutation of realistic data at scale."
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "gecko" }]
license = "MIT"
documentation = "https://ul-mds.github.io/gecko/"
repository = "https://github.com/ul-mds/gecko"
keywords = ["data science", "data generation", "data mutation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.20.3,<2"
lxml = ">=5.3.0,<6"
pandas = "^2.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
gitpython = "^3.1.42"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.43"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["E731"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
